--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
-    "name": "vite-vanilla",
-    "private": true,
-    "version": "0.0.1",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview"
-    },
-    "devDependencies": {
-        "@types/node": "^16.11.26",
-        "@typescript-eslint/eslint-plugin": "^5.13.0",
-        "@typescript-eslint/parser": "^5.13.0",
-        "eslint": "^8.10.0",
-        "eslint-plugin-import": "^2.25.4",
-        "prettier": "^2.5.1",
-        "sass": "^1.58.0",
-        "typescript": "^4.6.2",
-        "vite": "^2.8.0"
-    }
+  "name": "vite-vanilla",
+  "private": true,
+  "version": "0.0.2",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "sass": "^1.62.0",
+    "typescript": "^4.9.3",
+    "vite": "^4.0.0"
+  }
 }
